# savaged-us-pwa

./: .gitignore  404.html  Cargo.toml  LICENSE.txt  Makefile  README.md  Trunk.toml  build.txt  index.html  main.scss  wasm-up-index.txt
assets/images/: fuchsia_theme_bg.xcf  green_theme_bg.xcf  red_theme_bg.xcf
images/favicons/: favicon-32x32-messages-waiting.xcf
scss/: admin-table.scss  alerts.scss  alliante.scss  edit-form.scss  flex-grid.scss  fonts.scss  lds_roller.scss  lds_spinner.scss  modals.scss  standard_components.scss  tables.scss  user-data.scss  utils.scss  variables.scss
scss/rpgawesome/: _fixed-width.scss  _icons.scss  _larger.scss  _list.scss  _variables.scss  rpg-awesome.scss
src/: lib.rs  main.rs  main_app.rs  menu_items.rs
src/components/: abilities_entry.rs  alerts.rs  confirmation_dialog.rs  conflicts_entry.rs  effects_entry.rs  image_uploader.rs  lds_roller.rs  lds_spinner.rs  menu_main.rs  menu_mobile.rs  mod.rs  select_minimum_strength.rs  standard_modal.rs  tertiary_links_menu.rs  tertiary_menu.rs  ui_page.rs
src/components/admin/: admin_filter_search.rs  admin_table.rs  admin_table_ownership_badge.rs  admin_table_paging.rs  book_select.rs  edit_view_delete_buttons.rs  mod.rs
src/components/admin/admin_table_field/: active.rs  bool.rs  mod.rs  text.rs
src/components/edit_forms/: TEMPLATE.rs  armor.rs  edge.rs  gear.rs  gear_enhancement.rs  hindrance.rs  mod.rs  weapon.rs  weapon_profile.rs
src/libs/: admin_api.rs  data_api.rs  fetch_api.rs  global_vars.rs  mod.rs  site_vars.rs
src/local_storage/: mod.rs
src/pages/: error404.rs  main_about.rs  main_home.rs  main_playground.rs  main_tech.rs  main_todos.rs  mod.rs
src/pages/admin/: home.rs  mod.rs
src/pages/admin/game_data/: TEMPLATE.rs  armor-del.rs  armor.rs  edges.rs  gear.rs  gear_enhancements.rs  hindrances.rs  home.rs  mod.rs  weapons.rs
src/pages/admin/users/: activity.rs  list.rs  mod.rs
src/pages/help/: article.rs  home.rs  mod.rs
src/pages/info/: about.rs  contact_us.rs  info_router.rs  mod.rs  partners.rs  privacy_policy.rs  tech.rs  todos.rs
src/pages/user/: forgot_password.rs  login.rs  mod.rs  notifications.rs  register.rs  settings_api_key.rs  settings_devices.rs  settings_private.rs  settings_public.rs  subscription.rs  user_router.rs
src/pages/user/campaigns/: mod.rs
src/pages/user/saves/: list.rs  mod.rs  saves_router.rs
src/pages/user_data/: campaigns.rs  mod.rs  saves.rs  user_data_router.rs
src/standard_components/: LICENSE.txt  README.md  mod.rs
src/standard_components/libs/: fetch_json.rs  local_storage_shortcuts.rs  mod.rs  set_document_title.rs
src/standard_components/tests/: mod.rs  test_sheet.rs  test_sheet_global_vars.rs  test_sheet_router.rs
src/standard_components/ui/: input_checkbox.rs  input_text.rs  mod.rs  nbsp.rs  raw_html.rs  textarea.rs
src/web_sockets/: handle_message.rs  mod.rs
src/websockets/: mod.rs
(+4 files in other folders)
