[package]
name = "savaged-front-end"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"

standard-components = { path="../standard-components" }
savaged-libs = { path="../savaged-libs" }
wasm-bindgen = "0.2"

wasm-bindgen-futures = "0.4.33"
futures = "0.3.25"
gloo-utils = "0.1.5"
gloo-console = "0.2.3"
gloo-net = "0.2.5"
gloo-timers = "0.2.5"

serde = "1.0.147"
serde_json = "1.0.87"
# stream-reconnect = { git="https://github.com/PhotonQuantum/stream-reconnect", default-features = false, features = ["async-std"] }

chrono = { version = "0.4.22", features = ["serde"] }
chrono-tz = "0.8.0"

[dependencies.web-sys]
version = "0.3.60"
# We need to enable all the web-sys features we want to use!
features = [
    "console",
    "Storage",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'File',
    'Window',
    "Clipboard",
    "Blob",
    "FormData",
#    "Document",
#    "HtmlElement",
#    "MouseEvent",
#    "DomRect",
]