[package]
name = "savaged-front-end"
version = "0.1.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
# this is the development version of Yew
# yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = "0.17"

standard-components = { path="../standard-components" }
savaged-libs = { path="../savaged-libs" }
wasm-bindgen = "0.2"

wasm-bindgen-futures = "0.4.33"
futures = "0.3.25"
gloo-utils = "0.1.5"
gloo-console = "0.2.3"
gloo-net = "0.2.5"
gloo-timers = "0.2.5"
serde = "1.0.147"
serde_json = "1.0.87"
chrono = { version = "0.4.22", features = ["serde"] }
chrono-tz = "0.8.0"
indexed_db_futures = "0.3.0"
blob = "0.3.0"
libmath = "0.2.1"
serde_repr = "0.1.10"
async-std = "1.12.0"
wasm-timer = "0.2.5"

[dependencies.uuid]
version = "1.1.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Serialize/Deserialize
]

[dependencies.web-sys]
version = "0.3.60"
# We need to enable all the web-sys features we want to use!
features = [
    "console",
    "Storage",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'File',
    'Window',
    "Clipboard",
    "Blob",
    "MediaSource",
    "HtmlSelectElement",
    "Url",
    "FileReader",
    "FormData",
    "TouchList",
    "Touch",
    "Navigator",
#    "Document",
#    "HtmlElement",
#    "MouseEvent",
#    "DomRect",
]
